// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModalContent renders correctly > with children 1`] = `
<div
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 text_fa06f86ba0 text1Normal_825d27cf03 container"
  data-testid="modal-content"
>
  <div>
    children
  </div>
</div>
`;

exports[`ModalContent renders correctly > with empty props 1`] = `
<div
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 text_fa06f86ba0 text1Normal_825d27cf03 container"
  data-testid="modal-content"
>
  content
</div>
`;
